[gd_scene load_steps=17 format=3 uid="uid://df6dqm8i3m7fl"]

[ext_resource type="Texture2D" uid="uid://ulkho142r2n" path="res://Assets/Bg menu/layer1.png" id="1_n6dab"]
[ext_resource type="Script" uid="uid://1enpiwpo86r5" path="res://Scenes/Interface/menu.gd" id="1_x8ad2"]
[ext_resource type="Texture2D" uid="uid://dso8fo7hnyod0" path="res://Assets/Bg menu/layer2.png" id="2_wd1pm"]
[ext_resource type="Texture2D" uid="uid://c1pyhbfqn5n07" path="res://Assets/Bg menu/layer3.png" id="3_xgjve"]
[ext_resource type="Texture2D" uid="uid://c6gvcn2eroxxh" path="res://Assets/Bg menu/layer4.png" id="4_thwh6"]
[ext_resource type="Texture2D" uid="uid://bc7pndrw5gnjx" path="res://Assets/Bg menu/layer5.png" id="5_thwh6"]
[ext_resource type="Texture2D" uid="uid://caqxihntv4f22" path="res://Assets/Bg menu/bird_eye.png" id="8_otowq"]
[ext_resource type="FontFile" uid="uid://rlspynl2ohbe" path="res://Assets/ttf/HarryPotterKudosEN-en.ttf" id="8_pird8"]
[ext_resource type="Texture2D" uid="uid://bx8sd3s82qcdk" path="res://Assets/Bg menu/point_light.png" id="10_dqopg"]
[ext_resource type="AudioStream" uid="uid://1w1l6lymof30" path="res://Assets/Music/sound-ideas-afternoon-forest-ambience-with-close-and-distant-birds.mp3" id="11_ueuet"]

[sub_resource type="Curve" id="Curve_x8ad2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_x8ad2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 160, 94, 0, 0, 0, 0, 142, 82)
}
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pird8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_dqopg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parallax/Layer4/Sprite2D/PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.7, 0.7, 0.7, 1)]
}

[sub_resource type="Animation" id="Animation_otowq"]
resource_name = "start game"
length = 8.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parallax/Layer4/Sprite2D/PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.7, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.7, 0.7, 0.7, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqopg"]
_data = {
&"RESET": SubResource("Animation_dqopg"),
&"start game": SubResource("Animation_otowq")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_x8ad2")
position_curve = SubResource("Curve_x8ad2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ueuet")
autoplay = true
metadata/_edit_lock_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.7, 0.7, 0.7, 1)

[node name="Parallax" type="Node2D" parent="."]

[node name="Layer5" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.05, 0.05)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Layer5"]
texture = ExtResource("5_thwh6")
centered = false
metadata/_edit_lock_ = true

[node name="Layer4" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.2, 0.2)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Layer4"]
texture = ExtResource("4_thwh6")
centered = false
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="Parallax/Layer4/Sprite2D"]
position = Vector2(57, 106)
energy = 0.7
texture = ExtResource("10_dqopg")
texture_scale = 1.7

[node name="Layer3" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.3, 0.3)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Layer3"]
texture = ExtResource("3_xgjve")
centered = false
metadata/_edit_lock_ = true

[node name="Layer2" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.6, 0.6)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Layer2"]
texture = ExtResource("2_wd1pm")
centered = false
metadata/_edit_lock_ = true

[node name="Layer1" type="Parallax2D" parent="Parallax"]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Layer1"]
texture = ExtResource("1_n6dab")
centered = false
metadata/_edit_lock_ = true

[node name="Eye" type="Sprite2D" parent="Parallax/Layer1"]
unique_name_in_owner = true
visible = false
position = Vector2(232.5, 80.5)
scale = Vector2(0.0625008, 0.0625001)
texture = ExtResource("8_otowq")

[node name="Timer" type="Timer" parent="Parallax/Layer1/Eye"]
wait_time = 2.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(12, 9)
zoom = Vector2(1.2, 1.2)
metadata/_edit_lock_ = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_x8ad2")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 220.0
offset_top = 107.0
offset_right = 242.0
offset_bottom = 135.0
scale = Vector2(0.85, 0.85)
theme_override_constants/separation = 1
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.894118, 0.65098, 0.447059, 1)
theme_override_fonts/font = ExtResource("8_pird8")
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal = SubResource("StyleBoxFlat_pird8")
text = "..."
metadata/_edit_lock_ = true

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.894118, 0.65098, 0.447059, 1)
theme_override_fonts/font = ExtResource("8_pird8")
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal = SubResource("StyleBoxFlat_pird8")
text = "Start"
metadata/_edit_lock_ = true

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.894118, 0.65098, 0.447059, 1)
theme_override_fonts/font = ExtResource("8_pird8")
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal = SubResource("StyleBoxFlat_pird8")
text = "Option"
metadata/_edit_lock_ = true

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.894118, 0.65098, 0.447059, 1)
theme_override_fonts/font = ExtResource("8_pird8")
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/hover = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pird8")
theme_override_styles/normal = SubResource("StyleBoxFlat_pird8")
text = "Exit
"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqopg")
}

[connection signal="timeout" from="Parallax/Layer1/Eye/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
